# tensight

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py  test_tensight.py
.github/: .gitkeep  README.md
.github/workflows/: docs.yml
docs/: _config.yml  contributing.md  index.md
docs/api/: analyzers.md  detectors.md  reference.md
docs/assets/: extra.css
docs/examples/: cnn.md  mnist.md  transformer.md
docs/features/: activation-probing.md  gradient-noise.md  loss-landscape.md  precheck.md  watcher.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
tensight/: README.md  __init__.py  precheck.py  requirements.txt  setup.py  test_MNIST.py  test_landscape.py  test_tensight.py  watcher.py
tensight/analyzers/: __init__.py  gradient_noise.py  loss_landscape.py
tensight/detectors/: __init__.py  dead_neurons.py  gradient.py  learning_rate.py
tensight/report/: __init__.py  builder.py
tensight/tensight/: __init__.py  precheck.py  watcher.py
tensight/tensight/analyzers/: __init__.py  activation_probing.py  gradient_noise.py  loss_landscape.py
tensight/tensight/detectors/: __init__.py  dead_neurons.py  gradient.py  learning_rate.py
tensight/tensight/report/: __init__.py  builder.py
tensight/tests/: test_activation_probing.py  test_gradient_noise.py  test_landscape.py
