[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensight"
version = "0.1.0"
description = "Analysis and diagnostics tool for PyTorch models"
requires-python = ">=3.7"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

